--- a/src/lintel-disktool.in
+++ b/src/lintel-disktool.in
@@ -54,6 +54,8 @@ if ($ARGV[0] eq 'partition') {
 } elsif ($ARGV[0] eq 'fail') {
     shift @ARGV;
     failDrives(@ARGV);
+} elsif ($ARGV[0] eq 'scan') {
+    system("scsiadd -s") == 0 || die "scsiadd -s failed";
 } elsif ($ARGV[0] eq 'debug-sfdisk') {
     $config{debug} = 1;
     my @ret = getSpecificSfdiskInfo($ARGV[1]);
@@ -61,6 +63,8 @@ if ($ARGV[0] eq 'partition') {
 } else {
     usage("Unknown command '$ARGV[0]'");
 }
+
+exit(0);
 
 sub usage {
     my($msg) = @_;
@@ -659,6 +663,8 @@ sub failDrives {
 	shift @which;
     }
 
+    readConfig();
+    grep(s!^$config{mount_path}/!!o, @which);
     die "No paths to fail" unless @which > 0;
 
     my %mounted = getMounted();
