PThread.hpp.in: remove warning on 32bit
flock.sh: more debugging output to track down how the lock test is failing.
  New guess -- it's failing by getting the test lock before the real one
  happens, so add a sleep in.

--- a/include/Lintel/PThread.hpp.in
+++ b/include/Lintel/PThread.hpp.in
@@ -304,8 +304,8 @@ public:
 	SINVARIANT(clock_gettime(CLOCK_REALTIME, &abstime) == 0);
 	SINVARIANT(seconds >= 0);
 
-	abstime.tv_sec += floor(seconds);
-	abstime.tv_nsec += round(1.0e9 * (seconds - floor(seconds)));
+	abstime.tv_sec += static_cast<time_t>(floor(seconds));
+	abstime.tv_nsec += static_cast<time_t>(round(1.0e9 * (seconds - floor(seconds))));
 
 	if (abstime.tv_nsec > 1000 * 1000 * 1000) {
 	    abstime.tv_sec += 1;
