Overall : 20/AJ - disk failure
Code review; approved, fixed leading _ in file name

--- a/src/lintel-disktool.in
+++ b/src/lintel-disktool.in
@@ -444,7 +444,7 @@ sub fsckDrives {
 	}
 	print "$drive ";
 	my $xpart = $partition;
-	$xpart =~ s!/dev!!o;
+	$xpart =~ s!/dev/!!o;
 	$xpart =~ s!/!_!o;
 	$process_manager->fork
 	    (cmd => "fsck $partition -- -y",
