Overall: 21/BA : HTTP Get
Needed BoyerMooreHorspool to give offset, not just boolean if matched.

Detail: 
 * src/tests/boyer_moore_horspool.cpp, src/tests/CMakeLists.txt
   Added regression tests for the BMH fgrep implementation

 * src/BoyerMooreHorsepool.cpp include/Lintel/BoyerMooreHorspool.hpp
   Added ssize_t find() interface, fixed todo-tomer's

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -39,6 +39,7 @@ LINTEL_SIMPLE_TEST(hashtuplestats)
 LINTEL_SIMPLE_TEST(statscube)
 LINTEL_SIMPLE_TEST(priority_queue)
 LINTEL_SIMPLE_TEST(byte_buffer)
+LINTEL_SIMPLE_TEST(boyer_moore_horspool)
 
 ################################## SPECIAL TEST PROGRAMS
 
