CMakeConfig.txt: check for DBI module and DBD::mysql modules, enable lintel_dbi if we have these.
src/CMakeLists.txt: only do lintel dbi if it's enabled.

deptool.in: be more accepting on email addresses.

CMakeLists.txt: only test lintel dbi if it was enabled.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -92,10 +92,17 @@ IF(PERL_ENABLED)
     	Text/ExpandInt.pm
     	Lintel/Net/SSH/KnownHostsFile.pm
     	Lintel/File/Lock.pm
-	Lintel/DBI.pm
 	Lintel/ProcessManager.pm
     )
+
 ENDIF(PERL_ENABLED)
+
+IF(LINTEL_DBI_ENABLED)
+    LINTEL_INSTALL_FILE_PATH(${CMAKE_INSTALL_PREFIX}/share/perl5
+        Lintel/DBI.pm
+    )
+ENDIF(LINTEL_DBI_ENABLED)
+
 
 IF(MERCURY_PLOT_ENABLED)
     LINTEL_INSTALL_FILE_PATH(${CMAKE_INSTALL_PREFIX}/share/perl5
