DJ: Changes to seperate common utility function to compare STL ranges

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -40,6 +40,7 @@ LINTEL_SIMPLE_TEST(statscube)
 LINTEL_SIMPLE_TEST(priority_queue)
 LINTEL_SIMPLE_TEST(byte_buffer)
 LINTEL_SIMPLE_TEST(boyer_moore_horspool)
+LINTEL_SIMPLE_TEST(stlutility)
 
 ################################## SPECIAL TEST PROGRAMS
 
