--- a/src/mercury-plot.in
+++ b/src/mercury-plot.in
@@ -1578,7 +1578,7 @@ Imports the data from the specified filenames into SQL, assumes that
 the original data is space separated.  Auto infers column types of
 bigint, double, varchar(255), longtext from the contents of the files.
 
-=head1 TODO
+=head1 TO FIX
 
 =over 4
 
