* Working on removing TODO's
DebugFlag.hpp: abstract out the code that marks debugging or not, and make
  it not have ASSERT BOOST in the name.

include/Lintel/CMakeLists.txt: install new file

AssertBoost.hpp, PThread.hpp.in, ProgramOptions.hpp, PThread.cpp, 
  StatsQuantile.cpp: use new debug flag

stats_quantile.cpp: stop using deprecated Clock::todll()

--- a/include/Lintel/PThread.hpp.in
+++ b/include/Lintel/PThread.hpp.in
@@ -84,7 +84,7 @@ public:
 
 class PThreadScopedOnlyMutex : boost::noncopyable {
 public:
-#if DEBUG
+#if LINTEL_DEBUG
 #define LINTEL_PTHREAD_DEFAULT_ERRORCHECK true
 #else
 #define LINTEL_PTHREAD_DEFAULT_ERRORCHECK false
